Fix lightbox z-index bug

--- a/themes/skyblue/css/node.css
+++ b/themes/skyblue/css/node.css
@@ -64,6 +64,8 @@
   display:inline;
   float:left;
   margin:0;
+  position:relative;
+  z-index:3;
 }
   .field-video {
     margin: 0 30px 5px 0;
